language_tests/outputs/invalid/clone_via_extension_no_impl.out
error: type 'MyType' does not satisfy requirements for interface 'Clone'
 -> language_tests/source_files/invalid/clone_via_extension_no_impl.tr:10:5
	impl Clone for MyType {
	     ^^^^^
info: missing required method 'clone' with signature '(&Self) -> Self'
 -> language_tests/source_files/invalid/clone_via_extension_no_impl.tr:10:5
	impl Clone for MyType {
	     ^^^^^
